- Changed adding new configuration UI; - Show default values in the new option popup; - Word-wrap option description; - Fixed remove configuration.
// Resolve #118

--- a/app/media/styles/modules/project.less
+++ b/app/media/styles/modules/project.less
@@ -201,6 +201,9 @@
 
 .dropdown-add-new-option {
   .option-description {
-    &:extend(small);
+    color: @text-color-secondary;
+    font-size: 12px;
+    line-height: 1.3em;
+    white-space: normal;
   }
 }
